# lvgl-cmake

./: README.md
src/lvgldemo/: CMakeLists.txt  CMakeSettings.json  ReadMe.txt
src/lvgldemo/lvgldemo/: CMakeLists.txt  main.c
